--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -25,7 +25,7 @@
 
 .contactSubHeading {
 	width: 100%;
-	margin: 0;
+	margin: 1rem 0;
 	text-align: center;
 	background: linear-gradient(to top, hsla(0, 0%, 0%, 0.2) 20%, transparent);
 }
@@ -33,6 +33,7 @@
 	position: relative;
 	display: flex;
 	flex-wrap: wrap;
+	max-width: 100vw;
 	z-index: 10;
 }
 
@@ -43,12 +44,10 @@
 	align-items: center;
 	flex-wrap: wrap-reverse;
 	min-width: 30rem;
-	padding: 0 2rem;
+	max-width: 100vw;
+	padding: 1rem 0.5rem;
 	z-index: 11;
 	background: linear-gradient(30deg, var(--color-4) 40%, transparent 40%);
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: auto;
 }
 
 .contact-about-container {
@@ -65,7 +64,14 @@
 }
 
 @media (max-width: 520px) {
-	.contact-about-container {
+	.hero-container span {
+		line-height: 1.4;
+	}
+	.contact-container {
+		margin-top: 15%;
+	}
+	.contact-about-container,
+	.social-container {
 		min-width: 20rem;
 	}
 }
