--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,7 +26,7 @@
 
 html {
 	font-family: "Lato";
-	color: hsla(0, 0%, 100%, 0.89);
+	color: var(--color-2);
 	overflow-x: hidden;
 }
 
